syntax = "proto3";
package todo;
option go_package = "internal/delivery/grpc/pb";

service TodoService {
    rpc CreateTask(CreateTaskRequest) returns (TaskResponse) {}
    rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}
    rpc EditTask(EditTaskRequest) returns (EditTaskResponse) {}
    rpc DeleteTask(DeleteTaskRequest) returns (TaskResponse) {}
}

message Task {
    int64 id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
}

message CreateTaskRequest {
    string title = 1;
    string description = 2;
}

message TaskResponse {
    Task task = 1;
}

message ListTasksRequest {}

message ListTasksResponse {
    repeated Task tasks = 1;
}

message EditTaskRequest {
    Task task = 1;
}

message EditTaskResponse {
    Task task = 1;
}

message DeleteTaskRequest {
    int64 id = 1;
}
